--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "loopreturns-api",
-  "version": "1.0.0",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "mongodb": "^5.7.0"
   }
