--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "name": "loopreturns-api",
+  "version": "1.0.0",
   "type": "module",
   "engines": {
-    "node": "18.x"
+    "node": "22.x"
   },
   "dependencies": {
-    "mongodb": "^5.7.0"
+    "mongodb": "^6.9.0"
   }
 }
