--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
-  "name": "loopreturns-api",
+  "name": "loopreturns-dashboard",
   "version": "1.0.0",
+  "private": true,
   "type": "module",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "engines": {
     "node": "22.x"
   },
   "dependencies": {
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.4.1",
     "mongodb": "^6.9.0"
   }
 }
